src/components/footer/footer.module.css
.footer {
  background-color: var(--primary);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  padding: 40px 20px;
  gap: 20px;
  width: 100%;
  margin: 0 auto;
}

.firstRow {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.brandLogo {
  width: 193px;
}
.link {
  display: flex;
  gap: 30px;
}

.link a {
  color: var(--bg);
  text-decoration: none;
}
.socialMedia {
  display: flex;
  gap: 20px;
}

.facebookLogo,
.twitterLogo,
.youtubeLogo,
.linkedinLogo {
  width: 59.3px;
}

.copyright {
  color: var(--bg);
  opacity: 0.6;
}
.footer p {
  margin-bottom: 0;
}

@media (min-width: 900px) {
  .firstRow {
    display: grid;
    grid-template-columns: auto 1fr auto;
    grid-template-rows: auto auto;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
  }

  .brand,
  .link,
  .socialMedia {
    display: flex;
    align-items: center;
    gap: 20px;
  }
  .brand {
    justify-self: start;
  }
  .link {
    justify-self: center;
  }
  .socialMedia {
    justify-self: end;
  }
  .copyright {
    grid-column: 2;
    text-align: center;
  }
}

